syntax = "proto3";

service AuthService {
    rpc IsAuthenticated (IsAuthenticatedRequest) returns (IsAuthenticatedResponse);
    rpc RefreshToken (RefreshTokenRequest) returns (RefreshTokenResponse);
    rpc Test(emptyRequest) returns (TestResponse);
}

message emptyRequest{}

message TestResponse {
    bool success = 1;
}

message IsAuthenticatedRequest {
    string accessToken = 1;
    string refreshToken = 2;
    string role = 3;
}


message IsAuthenticatedResponse {
    string message = 1;
    bool success = 2;
    int32 status = 3;
}

message RefreshTokenRequest {
    string refreshToken = 1;
}

message RefreshTokenResponse {
    bool success = 1;
    int32 status = 2;
    string message = 3;
    string accessToken = 4;
    string refreshToken = 5;
}