syntax = "proto3";


service TranscoderService {
  rpc UploadFile(FileUploadRequest) returns (stream TranscodeStatus);
  rpc Test(emptyRequest) returns (TestResponse);
}

message emptyRequest{}

message TestResponse {
    bool success = 1;
}

message FileUploadRequest {
  string tutorId = 1;    // Unique job identifier
  bytes file = 3;  // File content as binary data
}


message TranscodeStatus {
  string status = 1;    // Transcoding, Uploading, Completed, etc.
  string message = 2;   // Additional info
  int32 progress = 3;   // Progress percentage (0-100)
  string videoURL = 4;
}